--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </head>
     <body leftmargin="0" topmargin="0">
         <div class="fullscreen">
-        <h1> LUST </h1>        
+        <h1> LUST </h1>
+        <img src="images/ouroboros-transparent.png">
 
 
             <!-- 6가지 heading type, 주로 3, 4만 사용하게 될 것 같음
