--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     </head>
     <body leftmargin="0" topmargin="0">
         <div class="fullscreen">
-        <h1> LUST </h1>
-        <img src="images/ouroboros-transparent.png">
+            <h1> LUST </h1>
+        </div>
+        <div class="logo-img">
+            <img src="images/ouroboros-transparent.png">
 
+        </div>
 
             <!-- 6가지 heading type, 주로 3, 4만 사용하게 될 것 같음
 
@@ -56,6 +59,5 @@
                 <a href="http://imgur.com/ZYjaTXG">
                 따흑 </a>
             </p> -->
-        </div>
     </body>
 </html>
