initial-scale 추가

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta charset="utf-8"/>
         <!-- 뷰포트 요소 라고함. 뷰포트의 너비에서 페이지가 랜더링하도록 하며, 
             모바일 이미지가 뷰포트보다 넓은 페이지를 랜더링한 후 축소하는 것을 방지 -->
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1" >
         <!-- 페이지 제목 설정, 로드된 브라우저의 탭에 나타나는 제목, 즐겨찾기에서 페이지 설명으로 사용될 수 있음 -->
         <title> Lust </title>
     </head>
